--- a/app/index.css
+++ b/app/index.css
@@ -10,6 +10,34 @@ li {
 	list-style-type: none;
 }
 
+a {
+	text-decoration: none;
+	color: #d0021b;
+}
+
+.button {
+  color: #e6e6e6;
+  background: #0a0a0a;
+  border: none;
+  font-size: 16px;
+  border-radius: 3px;
+  width: 200px;
+  text-align: center;
+  display: block;
+  padding: 7px 0;
+  margin: 10px auto;
+}
+
+.button:hover:enabled {
+  background: linear-gradient(#1a1a1a,#0a0a0a);
+  color: #fff;
+  text-decoration: none;
+}
+
+.button:active {
+  transform: translateY(1px);
+}
+
 .container {
 	max-width: 1200px;
 	margin: 0 auto;	
@@ -51,3 +79,23 @@ li {
 	border-radius: 50%;
 }
 
+.nav {
+	display: flex;
+}
+
+.nav li {
+	margin-right: 15px;
+
+}
+
+.active {
+	font-weight: bold;
+}
+
+.home-container {
+	display: flex;
+	flex-direction: column;
+	// center align horizontally
+	align-items: center;
+	text-align: center;
+}
